--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "vuepress-plugin-readmore",
   "version": "1.0.0",
+  "description": "vuepress-plugin-readmore 阅读更多 博客引流 解锁文章",
   "main": "index.js",
-  "repository": "https://github.com/itclanCode/vuepress-plugin-readmore.git",
-  "author": "随笔川迹 微信公众号:itclanCoder,站点:http://coder.itclan.cn/",
-  "keywords":[
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/itclanCode/vuepress-plugin-readmore.git"
+  },
+  "keywords": [
     "vuepress",
-    "plugin",
     "vuepress-plugin-readmore",
+    "plugin",
     "readmore"
   ],
-  "license": "MIT",
+  "author": "随笔川迹  itclanCoder 站点:http://itclan.cn/",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/itclanCode/vuepress-plugin-readmore/issues"
   },
-  "homepage": "https://github.com/itclanCode/vuepress-plugin-readmore"
+  "homepage": "https://github.com/itclanCode/vuepress-plugin-readmore#readme"
 }
